<resources>
    <string name="app_name">Geekmonkey Internal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Geekmonkey Internal</string>
    <string name="nav_header_subtitle">Gifts Woi Jo Lage Sabko Sahi</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Shopify</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_amazon">Amazon</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_tasks">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>