<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gkmonk.finalgeekmonkeyapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shopify"
        android:name="com.gkmonk.finalgeekmonkeyapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_amazon"
        android:name="com.gkmonk.finalgeekmonkeyapp.ui.amazon.AmazonFragment"
        android:label="@string/menu_amazon"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.gkmonk.finalgeekmonkeyapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.gkmonk.finalgeekmonkeyapp.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_slideshow" />
</navigation>